konum güncellendi, datathon ekleniyo
abi ufak sıkıntı oldu sss eklerken cozucez ins

--- a/program/index.html
+++ b/program/index.html
@@ -54,7 +54,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500&display=swap" rel="stylesheet">
-    <title> Boğaziçi DataCamp '22 </title>
+    <title> Boğaziçi DataCamp '23 </title>
     <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128963962-1"></script>
     <script>
@@ -90,7 +90,7 @@
     <!--End of Tawk.to Script-->
     <header class="main" style="background-color: #0a0462;">
       <div class="containeer">
-        <a href="/" class="logo">
+        <a href="http://datacamp.boun.edu.tr/" class="logo">
           <img src="../assets/RGB-LogoV5.png" alt="Boğaziçi Datacamp">
         </a>
         <span id="navToggle" class="nav-toggle" onclick="toggleNav()" style="color: white;">
@@ -98,12 +98,12 @@
         </span>
         <nav id="nav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-          <a href="https://biletino.com/tr/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
+          <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
           <a href="" data-type="navItem" class="animated fast fadeOut">Program</a>
           <a href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
           <a href="../../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
+          <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '22</a>
           <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
-          <a href="/2020" data-type="navItem" class="animated fast fadeOut">DataCamp '20</a>
 
         </nav>
       </div>
@@ -114,11 +114,11 @@
         <div class="program-containerrr">
           <div class="program-head-wrapper">
             <div class="program-head-heading">
-              <p class="program-label">BOĞAZİÇİ DATACAMP ‘22</p>
+              <p class="program-label">BOĞAZİÇİ DATACAMP ‘23</p>
               <h1 class="program-heading">Programımız</h1>
             </div>
             <div class="program-head-desc">
-              <p>Boğaziçi DataCamp '22; Zirve, Workshoplar ve Webinarlar olmak üzere 3 kısımdan oluşmaktadır.</p>
+              <p>Boğaziçi DataCamp '23; Zirve, Workshoplar ve Datathon olmak üzere 3 kısımdan oluşmaktadır.</p>
             </div>
           </div>
         </div>
@@ -127,14 +127,14 @@
         <div class="program-containerrr" >
           <div class="day-card">
             <div class="day-card-head">
-              <p class="program-label program-label-sec program-label-yellow">Workshop</p>
-              <h2 class="program-heading">11 Kasım, Cuma </h1>
+              <p class="program-label program-label-sec program-label-purple">Workshop</p>
+              <h2 class="program-heading">2 Kasım Perşembe  </h1>
             </div>
             <div class="day-card-body">
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Veri Görselleştirmede Renk Kullanımı Veriye Ne Katar</h3>
+                    <h3 class="event-card-heading"> -KONU- </h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -145,7 +145,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">19.00 - 20.00</p>
+                        <p class="event-card-details-text">-saat-</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -163,10 +163,10 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/deniz_aksoy.jpg" alt="Deniz Aksoy">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Deniz Aksoy</p>
+                        <p class="event-card-name">-isim-</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Eğitmen</p>
-                          <p class="event-card-company">Deniz Aksoy Eğitim Tasarım Danışmanlık</p>
+                          <p class="event-card-position">-unvan-</p>
+                          <p class="event-card-company">-calisma yeri-</p>
                         </div>
                       </div>
                     </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Hibrit Öneri Sistemleri</h3>
+                    <h3 class="event-card-heading">-konu-</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -186,7 +186,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">19.00 - 20.30</p>
+                        <p class="event-card-details-text">-saat-</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -204,10 +204,10 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/beyza_aydogan.jpg" alt="Beyza Aydoğan">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Beyza Aydoğan</p>
+                        <p class="event-card-name">-isim-</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Data Scientist</p>
-                          <p class="event-card-company">Doğuş Teknoloji</p>
+                          <p class="event-card-position">-unvan-</p>
+                          <p class="event-card-company">-calisma yeri-</p>
                         </div>
                       </div>
                     </div>
@@ -322,8 +322,8 @@
         <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
-              <p class="program-label program-label-sec program-label-purple">Zirve</p>
-              <h2 class="program-heading">12 Kasım, Cumartesi </h1>
+              <p class="program-label program-label-sec program-label-purple">Workshop</p>
+              <h2 class="program-heading">3 Kasım, Cuma </h1>
             </div>
             <div class="day-card-body">
               <div class="day-card-row">
@@ -963,8 +963,8 @@
         <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
-              <p class="program-label program-label-sec program-label-purple">Zirve</p>
-              <h2 class="program-heading">13 Kasım, Pazar </h1>
+              <p class="program-label program-label-sec program-label-purple">Workshop</p>
+              <h2 class="program-heading">4 Kasım, Cumartesi </h1>
             </div>
             <div class="day-card-body">
               <div class="day-card-row">
@@ -1604,8 +1604,8 @@
         <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
-              <p class="program-label program-label-sec program-label-yellow">Workshop</p>
-              <h2 class="program-heading">14 Kasım, Pazartesi </h2>
+              <p class="program-label program-label-sec program-label-yellow">Zirve</p>
+              <h2 class="program-heading">5 Kasım, Pazar </h2>
             </div>
             <div class="day-card-body">
               <div class="day-card-row">
