--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
                 <p style="text-align:center;font-size: 24px; line-height: 24px;">
 
                     2 & 3 & 4 Kasım Workshop : Online<br><br>
-                    5 Kasım Zirve : Boğaziçi Üniversitesi
+                    5 Kasım Zirve : Boğaziçi Üniversitesi Güney Kampüs
+                    <br>Albert Long Hall (Saatli Bina)<br>
                  
                 </p><br>
         </div>
