--- a/sss/index.html
+++ b/sss/index.html
@@ -73,7 +73,7 @@
         <!--End of Tawk.to Script-->
         <header class="main" style="background-color: #0a0462;">
             <div class="containeer" >
-                <a href="/" class="logo">
+                <a href="http://datacamp.boun.edu.tr/" class="logo">
 
                     <img src="../assets/RGB-LogoV5.png" alt="Boğaziçi Datacamp">
 
@@ -151,13 +151,30 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingFour">
+                    <div class = accordion-item">
+                      <h2 class ="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                          Etkinliğe katılanlara sertifika verilecek mi?
+                            Datathon Nedir ?
                         </button>
                       </h2>
                       <div id="collapseFour" class="accordion-collapse collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                        <div class = "accordion-body">
+
+                            Datathon, odağına veri teknolojilerini almış bir hackathon türüdür.
+                            Katılımcılar kendilerine verilen veri setlerini kısıtlı bir zaman diliminde dijital yetkinliklerini kullanarak analiz ederler ve ideal çözüme ulaşmaya çalışırlar.
+
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                          Etkinliğe katılanlara sertifika verilecek mi?
+                        </button>
+                      </h2>
+                      <div id="collapseFive" class="accordion-collapse collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           Zirveye ve workshoplara katılım
                             sağlayanlar sertifika almaya hak kazanacaklardır.
@@ -167,12 +184,12 @@
                       </div>
                     </div>
                     <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingFive">
+                      <h2 class="accordion-header" id="headingSix">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                           Zirveye sadece online olarak katılacaklar sertifika alabilecek mi?
                         </button>
                       </h2>
-                      <div id="collapseFive" class="accordion-collapse collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                      <div id="collapseSix" class="accordion-collapse collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           Evet, Boğaziçi Datacamp'e online olarak katılım sağlamak sertifika almaya engel değildir.
                         </div>
