--- a/program/index.html
+++ b/program/index.html
@@ -392,6 +392,34 @@
                           </div>
                         </div>
                       </div>
+
+                      <div class="event-card-profile-card">
+                        <div class="event-card-profile">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/omer_baris.jpg" alt="Ömer Barış Erkek">
+                        </div>
+                        <div class="event-card-about">
+                          <p class="event-card-name">Ömer Barış Erkek</p>
+                          <div class="event-card-title">
+                            <p class="event-card-position">Data Scientist</p>
+                            <p class="event-card-company">Fugo Games</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="event-card-profile-card">
+                        <div class="event-card-profile">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/nazli-ece.png" alt="Nazlı Ece Aktaş">
+                        </div>
+                        <div class="event-card-about">
+                          <p class="event-card-name">Nazlı Ece Aktaş</p>
+                          <div class="event-card-title">
+                            <p class="event-card-position">Product Data Analyst</p>
+                            <p class="event-card-company">Fugo Games</p>
+                          </div>
+                        </div>
+                      </div>
+
+
                     </div>
                   </div>
 
@@ -424,7 +452,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Açılış Konuşması</h3>
+                    <h3 class="event-card-heading">Ask Us Anything</h3>
                     <p class="event-card-desc">Zirvenin 2. gününe dair açılış konuşması</p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -435,7 +463,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">11.00 - 11.25</p>
+                        <p class="event-card-details-text">13 - 14.30</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -443,23 +471,36 @@
                             <path d="M13 18.6749L16.7125 14.9624C17.4467 14.2282 17.9466 13.2927 18.1492 12.2743C18.3517 11.256 18.2477 10.2004 17.8503 9.24111C17.4529 8.28183 16.78 7.46192 15.9167 6.88507C15.0533 6.30821 14.0383 6.00032 13 6.00032C11.9617 6.00032 10.9467 6.30821 10.0833 6.88507C9.21996 7.46192 8.54706 8.28183 8.14968 9.24111C7.75231 10.2004 7.64831 11.256 7.85084 12.2743C8.05337 13.2927 8.55333 14.2282 9.2875 14.9624L13 18.6749ZM13 20.7959L8.227 16.0229C7.283 15.0789 6.64014 13.8762 6.37969 12.5668C6.11925 11.2575 6.25293 9.90026 6.76382 8.66687C7.27471 7.43347 8.13988 6.37927 9.24991 5.63757C10.3599 4.89588 11.665 4.5 13 4.5C14.335 4.5 15.6401 4.89588 16.7501 5.63757C17.8601 6.37927 18.7253 7.43347 19.2362 8.66687C19.7471 9.90026 19.8807 11.2575 19.6203 12.5668C19.3599 13.8762 18.717 15.0789 17.773 16.0229L13 20.7959ZM13 12.7499C13.3978 12.7499 13.7794 12.5919 14.0607 12.3106C14.342 12.0293 14.5 11.6478 14.5 11.2499C14.5 10.8521 14.342 10.4706 14.0607 10.1893C13.7794 9.90798 13.3978 9.74994 13 9.74994C12.6022 9.74994 12.2206 9.90798 11.9393 10.1893C11.658 10.4706 11.5 10.8521 11.5 11.2499C11.5 11.6478 11.658 12.0293 11.9393 12.3106C12.2206 12.5919 12.6022 12.7499 13 12.7499ZM13 14.2499C12.2043 14.2499 11.4413 13.9339 10.8787 13.3713C10.3161 12.8087 10 12.0456 10 11.2499C10 10.4543 10.3161 9.69123 10.8787 9.12862C11.4413 8.56601 12.2043 8.24994 13 8.24994C13.7956 8.24994 14.5587 8.56601 15.1213 9.12862C15.6839 9.69123 16 10.4543 16 11.2499C16 12.0456 15.6839 12.8087 15.1213 13.3713C14.5587 13.9339 13.7956 14.2499 13 14.2499Z" fill="#6D6B7E" />
                           </svg>
                         </span>
-                        <p class="event-card-details-text">Albert Long Hall</p>
+                        <p class="event-card-details-text">Online</p>
                       </div>
                     </div>
                   </div>
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/oguz-kupeli.jpeg" alt="Oğuz Küpeli">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Oğuz Küpeli</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Level Design Lead</p>
+                          <p class="event-card-company">Fugo Games</p>
                         </div>
                       </div>
                     </div>
+
+                    <div class="event-card-profile-card">
+                        <div class="event-card-profile">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/alperen-yildirim.jpeg" alt="Alperen Yıldırım">
+                        </div>
+                        <div class="event-card-about">
+                          <p class="event-card-name">Alperen Yıldırım</p>
+                          <div class="event-card-title">
+                            <p class="event-card-position">Data Science Lead</p>
+                            <p class="event-card-company">Fugo Games</p>
+                          </div>
+                        </div>
+                      </div>
 
                   </div>
                 </div>
@@ -820,6 +861,7 @@
                       </div>
                     </div>
 
+
                   </div>
                 </div>
                 <div class="event-card">
@@ -1065,7 +1107,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Ask Me Anything</h3>
+                    <h3 class="event-card-heading">Açılış Konuşması</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1076,7 +1118,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">19.00 - 20.00</p>
+                        <p class="event-card-details-text">10.00 - 10.25</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1084,20 +1126,20 @@
                             <path d="M13 18.6749L16.7125 14.9624C17.4467 14.2282 17.9466 13.2927 18.1492 12.2743C18.3517 11.256 18.2477 10.2004 17.8503 9.24111C17.4529 8.28183 16.78 7.46192 15.9167 6.88507C15.0533 6.30821 14.0383 6.00032 13 6.00032C11.9617 6.00032 10.9467 6.30821 10.0833 6.88507C9.21996 7.46192 8.54706 8.28183 8.14968 9.24111C7.75231 10.2004 7.64831 11.256 7.85084 12.2743C8.05337 13.2927 8.55333 14.2282 9.2875 14.9624L13 18.6749ZM13 20.7959L8.227 16.0229C7.283 15.0789 6.64014 13.8762 6.37969 12.5668C6.11925 11.2575 6.25293 9.90026 6.76382 8.66687C7.27471 7.43347 8.13988 6.37927 9.24991 5.63757C10.3599 4.89588 11.665 4.5 13 4.5C14.335 4.5 15.6401 4.89588 16.7501 5.63757C17.8601 6.37927 18.7253 7.43347 19.2362 8.66687C19.7471 9.90026 19.8807 11.2575 19.6203 12.5668C19.3599 13.8762 18.717 15.0789 17.773 16.0229L13 20.7959ZM13 12.7499C13.3978 12.7499 13.7794 12.5919 14.0607 12.3106C14.342 12.0293 14.5 11.6478 14.5 11.2499C14.5 10.8521 14.342 10.4706 14.0607 10.1893C13.7794 9.90798 13.3978 9.74994 13 9.74994C12.6022 9.74994 12.2206 9.90798 11.9393 10.1893C11.658 10.4706 11.5 10.8521 11.5 11.2499C11.5 11.6478 11.658 12.0293 11.9393 12.3106C12.2206 12.5919 12.6022 12.7499 13 12.7499ZM13 14.2499C12.2043 14.2499 11.4413 13.9339 10.8787 13.3713C10.3161 12.8087 10 12.0456 10 11.2499C10 10.4543 10.3161 9.69123 10.8787 9.12862C11.4413 8.56601 12.2043 8.24994 13 8.24994C13.7956 8.24994 14.5587 8.56601 15.1213 9.12862C15.6839 9.69123 16 10.4543 16 11.2499C16 12.0456 15.6839 12.8087 15.1213 13.3713C14.5587 13.9339 13.7956 14.2499 13 14.2499Z" fill="#6D6B7E" />
                           </svg>
                         </span>
-                        <p class="event-card-details-text">Online</p>
+                        <p class="event-card-details-text">Albert Long Hall</p>
                       </div>
                     </div>
                   </div>
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/zafer-demirkol.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/tuna-tugcu.png" alt="Tuna Tuğcu">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Zafer Demirkol</p>
+                        <p class="event-card-name">Tuna Tuğcu</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">European AI Alliance Member</p>
-                          <p class="event-card-company">Zafer Demirkol Akademi</p>
+                          <p class="event-card-position">Professor</p>
+                          <p class="event-card-company">Boğaziçi University</p>
                         </div>
                       </div>
                     </div>
@@ -1107,7 +1149,7 @@
 
                 <div class="event-card" >
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Serverless Application Model</h3>
+                    <h3 class="event-card-heading">Oyun Sektöründe Veri Bilimi</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1118,7 +1160,7 @@
                               </g>
                             </svg>
                           </span>
-                        <p class="event-card-details-text">19.00 - 20.30</p>
+                        <p class="event-card-details-text">10.30 - 10.55</p>
                       </div>
                       <div class="event-card-details-element">
                           <span class="event-card-details-icon">
@@ -1126,23 +1168,39 @@
                               <path d="M13 18.6749L16.7125 14.9624C17.4467 14.2282 17.9466 13.2927 18.1492 12.2743C18.3517 11.256 18.2477 10.2004 17.8503 9.24111C17.4529 8.28183 16.78 7.46192 15.9167 6.88507C15.0533 6.30821 14.0383 6.00032 13 6.00032C11.9617 6.00032 10.9467 6.30821 10.0833 6.88507C9.21996 7.46192 8.54706 8.28183 8.14968 9.24111C7.75231 10.2004 7.64831 11.256 7.85084 12.2743C8.05337 13.2927 8.55333 14.2282 9.2875 14.9624L13 18.6749ZM13 20.7959L8.227 16.0229C7.283 15.0789 6.64014 13.8762 6.37969 12.5668C6.11925 11.2575 6.25293 9.90026 6.76382 8.66687C7.27471 7.43347 8.13988 6.37927 9.24991 5.63757C10.3599 4.89588 11.665 4.5 13 4.5C14.335 4.5 15.6401 4.89588 16.7501 5.63757C17.8601 6.37927 18.7253 7.43347 19.2362 8.66687C19.7471 9.90026 19.8807 11.2575 19.6203 12.5668C19.3599 13.8762 18.717 15.0789 17.773 16.0229L13 20.7959ZM13 12.7499C13.3978 12.7499 13.7794 12.5919 14.0607 12.3106C14.342 12.0293 14.5 11.6478 14.5 11.2499C14.5 10.8521 14.342 10.4706 14.0607 10.1893C13.7794 9.90798 13.3978 9.74994 13 9.74994C12.6022 9.74994 12.2206 9.90798 11.9393 10.1893C11.658 10.4706 11.5 10.8521 11.5 11.2499C11.5 11.6478 11.658 12.0293 11.9393 12.3106C12.2206 12.5919 12.6022 12.7499 13 12.7499ZM13 14.2499C12.2043 14.2499 11.4413 13.9339 10.8787 13.3713C10.3161 12.8087 10 12.0456 10 11.2499C10 10.4543 10.3161 9.69123 10.8787 9.12862C11.4413 8.56601 12.2043 8.24994 13 8.24994C13.7956 8.24994 14.5587 8.56601 15.1213 9.12862C15.6839 9.69123 16 10.4543 16 11.2499C16 12.0456 15.6839 12.8087 15.1213 13.3713C14.5587 13.9339 13.7956 14.2499 13 14.2499Z" fill="#6D6B7E" />
                             </svg>
                           </span>
-                        <p class="event-card-details-text">Online</p>
+                        <p class="event-card-details-text">Albert Long Hall</p>
                       </div>
                     </div>
                   </div>
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/esra_kayabali.jpg" alt="Esra Kayabalı">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/alperen-yildirim.jpeg" alt="Alperen Yıldırım">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Esra Kayabalı</p>
+                        <p class="event-card-name">Alperen Yıldırım</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Senior Solutions Architect</p>
-                          <p class="event-card-company">AWS</p>
+                          <p class="event-card-position">Data Science Lead</p>
+                          <p class="event-card-company">Fugo Games</p>
                         </div>
                       </div>
                     </div>
+
+
+                    <div class="event-card-profile-card">
+                        <div class="event-card-profile">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/oguz-kupeli.jpeg" alt="Oğuz Küpeli">
+                        </div>
+                        <div class="event-card-about">
+                          <p class="event-card-name">Oğuz Küpeli</p>
+                          <div class="event-card-title">
+                            <p class="event-card-position">Level Design Lead</p>
+                            <p class="event-card-company">Fugo Games</p>
+                          </div>
+                        </div>
+                      </div>
+
+
 
                   </div>
                 </div>
