sponsor ve içerik güncellemesi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="tr" xmlns="http://www.w3.org/1999/html">
     <head>
     <script>
         !function(f,b,e,v,n,t,s)
@@ -94,9 +94,9 @@
 
                     <a href="../../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
 
-                    <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
+                    <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
 
-                    <a href="/2020" data-type="navItem" class="animated fast fadeOut">DataCamp '20</a>
+                    <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '20</a>
 
                 </nav>
             </div>
@@ -109,13 +109,15 @@
   <div class="page-container">
     <section style="background-image:none;color:black;display:flex; flex-basis:100%;">
         <div class="sponsorspage">
-            <div class="sponsorscolumns"  style="display:none">
+            <div class="sponsorscolumns"  style="display:">
                 <div class="sponsorcoltitle">
                     Ana Sponsor
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <img src="../assets/compec-blue.png" alt="compec">
+                        <a href="https://fugo.com.tr/">
+                        <img src="../assets/partners/fugo.png" alt="Fugo Games" width="80%">
+                        </a>
                     </div>
 
                 </div>
@@ -126,14 +128,14 @@
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <a href="https://goodjobgames.com">
-                        <img src="../assets/partners/2022/workshop/goodjob_games.png" width="80%" alt="Good Job Games">
+                        <a href="https://www.sisecam.com.tr/tr">
+                        <img src="../assets/partners/sisecam.png" width="60%" alt="Şişecam">
                         </a>
                     </div>
 
                     <div class="sponsorimgcontainer">
-                        <a href="https://tazi.ai">
-                        <img src="../assets/partners/2022/zirve/taziai.png" width="80%" alt="TAZI AI">
+                        <a href="https://www.getmidas.com/">
+                        <img src="../assets/partners/midas.png" width="80%" alt="midas">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
