--- a/program/index.html
+++ b/program/index.html
@@ -453,7 +453,7 @@
                 <div class="event-card">
                   <div class="event-card-top">
                     <h3 class="event-card-heading">Ask Us Anything</h3>
-                    <p class="event-card-desc">Zirvenin 2. gününe dair açılış konuşması</p>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -463,7 +463,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">13 - 14.30</p>
+                        <p class="event-card-details-text">13.00f - 14.30</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -506,8 +506,8 @@
                 </div>
                 <div class="event-card">
                     <div class="event-card-top">
-                      <h3 class="event-card-heading">İş Bankası</h3>
-                      <p class="event-card-desc">Yapay Zeka Çevik Alanında Bir Veri Mühendisi ve Bir Veri Bilimci Ne Yapar</p>
+                      <h3 class="event-card-heading">Büyük Dil Modellerine Giriş</h3>
+                      <p class="event-card-desc"></p>
                       <div class="event-card-details">
                         <div class="event-card-details-element">
                           <span class="event-card-details-icon">
@@ -517,7 +517,7 @@
                               </g>
                             </svg>
                           </span>
-                          <p class="event-card-details-text">11.30 - 11.55</p>
+                          <p class="event-card-details-text">16.30 - 18.00</p>
                         </div>
                         <div class="event-card-details-element">
                           <span class="event-card-details-icon">
@@ -532,28 +532,17 @@
                     <div class="event-card-bottom">
                       <div class="event-card-profile-card">
                         <div class="event-card-profile">
-                          <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/melis_colak.jpg" alt="Melis Çolak">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/uzay_cetin.png" alt="Uzay Çetin">
                         </div>
                         <div class="event-card-about">
-                          <p class="event-card-name">Melis Çolak</p>
+                          <p class="event-card-name">Uzay Çetin</p>
                           <div class="event-card-title">
-                            <p class="event-card-position">Sistem Analisti</p>
-                            <p class="event-card-company">Türkiye İş Bankası</p>
+                            <p class="event-card-position">Co-Founder</p>
+                            <p class="event-card-company">Summarify</p>
                           </div>
                         </div>
                       </div>
-                      <div class="event-card-profile-card">
-                        <div class="event-card-profile">
-                          <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/ali_atilla_arisoy.jpg" alt="Ali Atilla Arısoy">
-                        </div>
-                        <div class="event-card-about">
-                          <p class="event-card-name">Ali Atilla Arısoy</p>
-                          <div class="event-card-title">
-                            <p class="event-card-position">Sistem Uzmanı</p>
-                            <p class="event-card-company">Türkiye İş Bankası</p>
-                          </div>
-                        </div>
-                      </div>
+
 
                     </div>
                   </div>
@@ -563,7 +552,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Veri Bilimi Kariyerine Yolculuk</h3>
+                    <h3 class="event-card-heading">Uçtan Uca Makine Öğrenmesi Modelleri & FastAPI & Docker</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -574,7 +563,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">12.00 - 12.25</p>
+                        <p class="event-card-details-text">19.30 - 21.30</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -589,13 +578,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/ozge_ozmen.jpg" alt="Özge Özmen">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/yunus_emre.png" alt="Yunus Emre Gündoğmuş">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Özge Özmen</p>
+                        <p class="event-card-name">Yunus Emre Gündoğmuş</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Founder</p>
-                          <p class="event-card-company">Data Science Turkey</p>
+                          <p class="event-card-position">Co-Founder</p>
+                          <p class="event-card-company">Summarify</p>
                         </div>
                       </div>
                     </div>
