büyük oranda updated

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -122,6 +122,17 @@
 
                 </div>
             </div>
+            <div class="sponsorscolumns"  style="">
+                <div class="sponsorcoltitle">
+                    Platin Sponsor
+                </div>
+                <div class="sponsorcolimgs">
+                    <div class="sponsorimgcontainer">
+                        <img src="../assets/partners/artiwisespo.png" alt="Artiwise">
+                    </div>
+
+                </div>
+            </div>
             <div class="sponsorscolumns">
                 <div class="sponsorcoltitle">
                     Altın Sponsor
@@ -129,7 +140,7 @@
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
                         <a href="https://www.sisecam.com.tr/tr">
-                        <img src="../assets/partners/sisecam.png" width="60%" alt="Şişecam">
+                        <img src="../assets/partners/sisecamspon.png" width="60%" alt="Şişecam">
                         </a>
                     </div>
 
@@ -139,33 +150,14 @@
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
-                        <a href="https://solvoyo.com">
-                        <img src="../assets/partners/2022/zirve/solvoyo.png" width="50%" alt="Solvoyo">
+                        <a href="https://www.fordotosan.com.tr/tr">
+                        <img src="../assets/partners/fordspo.png" width="85%" alt="Ford Otosan">
                         </a>
                     </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.d-teknoloji.com.tr">
-                        <img src="../assets/partners/2022/workshop/dogus_teknoloji.png" width="70%" alt="Doğuş Teknoloji">
-                        </a>
-                    </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.isbank.com.tr">
-                        <img src="../assets/partners/2022/zirve/Turkiye_Is_Bankasi.png" width="80%" alt="İş Bankası">
-                        </a>
-                    </div>
+
                 </div>
             </div>
-            <div class="sponsorscolumns"  style="display:none">
-                <div class="sponsorcoltitle">
-                    Platin Sponsor
-                </div>
-                <div class="sponsorcolimgs">
-                    <div class="sponsorimgcontainer">
-                        <img src="../assets/compec-blue.png" alt="compec">
-                    </div>
-                    <
-                </div>
-            </div>
+
             <div class="sponsorscolumns" >
                 <div class="sponsorcoltitle">
                     Okul Kulüpleri
@@ -219,24 +211,20 @@
 
                 </div>
             </div>
-            <div class="sponsorscolumns">
+            <div class="sponsorscolumns" style="">
                 <div class="sponsorcoltitle">
                     Partnerler
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <a href="https://globalaihub.com">
-                        <img src="../assets/partners/2022/partner/global_ai_hub.png" width="80%" alt="Global AI Hub">
+                        <a href="https://www.dskillshub.com/">
+                        <img src="../assets/partners/dskill.png" width="50%" alt="Digital Skills Hub">
                         </a>
                     </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://turkiye.ai">
-                        <img src="../assets/partners/2022/partner//TRAI_Logo.png" width="40%" alt="TR AI">
-                        </a>
-                    </div>
+
                 </div>
             </div>
-            <div class="sponsorscolumns">
+            <div class="sponsorscolumns" style="display:none">
                 <div class="sponsorcoltitle">
                     Destekçiler
                 </div>
