--- a/program/index.html
+++ b/program/index.html
@@ -160,13 +160,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/hevi.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-company">Hevi AI</p>
                         </div>
                       </div>
                     </div>
@@ -591,7 +591,7 @@
 
                   </div>
                 </div>
-                <div class="event-card"style="display:none">
+                <div class="event-card"style="visibility:hidden">
                   <div class="event-card-top">
                     <h3 class="event-card-heading">Mola</h3>
                     <p class="event-card-desc">Networking molası</p>
@@ -1164,13 +1164,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/ford.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-company">Ford Otosan</p>
                         </div>
                       </div>
                     </div>
@@ -1265,13 +1265,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/sisecam2.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"> </p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-company">Şişecam</p>
                         </div>
                       </div>
                     </div>
@@ -1403,13 +1403,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/muhammet-aksoy.png" alt="Muhammet Aksoy">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Muhammet Aksoy</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Research Engineer</p>
+                          <p class="event-card-company">ITU Aerospace Research Center</p>
                         </div>
                       </div>
                     </div>
@@ -1444,13 +1444,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/midas2.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-company">Midas</p>
                         </div>
                       </div>
                     </div>
@@ -1505,8 +1505,8 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Empathy at Scale: How AI Understands Your Customers Better</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1531,13 +1531,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/fatih-cetin.png" alt="Fatih Samet Çetin">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Fatih Samet Çetin</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Co-founder</p>
+                          <p class="event-card-company">Artiwise</p>
                         </div>
                       </div>
                     </div>
@@ -1577,13 +1577,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/palamar.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name"></p>
                         <div class="event-card-title">
                           <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-company">Palamar Technologies</p>
                         </div>
                       </div>
                     </div>
@@ -1618,13 +1618,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/deniz_aksoy.jpg" alt="Deniz Aksoy">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Deniz Aksoy</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Eğitmen</p>
+                          <p class="event-card-company">Deniz Aksoy Eğitim Tasarım Danışmanlık</p>
                         </div>
                       </div>
                     </div>
