program ve sponsorluk display edildi

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
                 <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
-                <a style="display:none;"href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
+                <a style=""href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
         
-                <a style = "display:none;"href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
+                <a style = ""href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
 
                 <a href="../program#datathon" style="display: none;" data-type="navItem" class="animated fast fadeOut">Datathon</a>
 
