--- a/program/index.html
+++ b/program/index.html
@@ -463,7 +463,7 @@
                             </g>
                           </svg>
                         </span>
-                        <p class="event-card-details-text">13.00f - 14.30</p>
+                        <p class="event-card-details-text">13.00 - 14.30</p>
                       </div>
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1650,7 +1650,7 @@
         </a>
         <p>
           <p style="font-size: 14px
-        ; line-height: 20px">© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+        ; line-height: 20px">© 2023 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
         </p>
       </div>
     </footer>
