--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -40,7 +40,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles.css"/>
         <title>
-            Boğaziçi DataCamp '22
+            Boğaziçi DataCamp '23
         </title>
 
 
@@ -94,9 +94,9 @@
 
                     <a href="../../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
 
-                    <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
+                    <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '22</a>
 
-                    <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '20</a>
+                    <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
 
                 </nav>
             </div>
@@ -158,7 +158,7 @@
                 </div>
             </div>
 
-            <div class="sponsorscolumns" >
+            <div class="sponsorscolumns" style="display:none" >
                 <div class="sponsorcoltitle">
                     Okul Kulüpleri
                 </div>
@@ -252,7 +252,7 @@
           </a>
           <p>
             <p style="font-size: 14px
-          ; line-height: 20px">© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+          ; line-height: 20px">© 2023 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
           </p>
         </div>
       </footer>
