--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -86,7 +86,7 @@
 
                     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
 
-                    <a href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
+                    <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
                     <a href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
 
