--- a/sss/index.html
+++ b/sss/index.html
@@ -88,9 +88,9 @@
 
                     <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp23-4889" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
-                    <a style="display:none;" href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
+                    <a href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
 
-                    <a style="display:none;"href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
+                    <a href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
 
                     <a href="../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
 
