program kaldı sade

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -122,7 +122,7 @@
 
                 </div>
             </div>
-            <div class="sponsorscolumns"  style="">
+            <div class="sponsorscolumns"  style="display:none">
                 <div class="sponsorcoltitle">
                     Platin Sponsor
                 </div>
@@ -138,11 +138,7 @@
                     Altın Sponsor
                 </div>
                 <div class="sponsorcolimgs">
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.sisecam.com.tr/tr">
-                        <img src="../assets/partners/sisecamspon.png" width="60%" alt="Şişecam">
-                        </a>
-                    </div>
+
 
                     <div class="sponsorimgcontainer">
                         <a href="https://www.getmidas.com/">
@@ -218,7 +214,12 @@
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
                         <a href="https://www.dskillshub.com/">
-                        <img src="../assets/partners/dskill.png" width="50%" alt="Digital Skills Hub">
+                        <img src="../assets/partners/dskill.png" width="30%" alt="Digital Skills Hub">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.linkedin.com/company/datascienceturkiye/?originalSubdomain=tr">
+                        <img src="../assets/partners/datascience.png" width="30%" alt="Data Science Turkey">
                         </a>
                     </div>
 
