--- a/program/index.html
+++ b/program/index.html
@@ -134,8 +134,8 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Üretici Çekişmeli Ağlar ile Medikal Görüntü Üretimi</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -160,12 +160,12 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/hevi.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/karagoz-ahmet.png" alt="Ahmet Karagöz">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Ahmet Karagöz</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
+                          <p class="event-card-position">Derin Öğrenme Mühendisi</p>
                           <p class="event-card-company">Hevi AI</p>
                         </div>
                       </div>
@@ -175,8 +175,8 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Paper Classification using Arxiv API and NLP</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -201,13 +201,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/guldeniz-bektas.png" alt="Güldeniz Bektaş">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Güldeinz Bektaş</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">AI Engineer</p>
+                          <p class="event-card-company">TurkNet</p>
                         </div>
                       </div>
                     </div>
@@ -1418,8 +1418,8 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Data Takımına Kimi Alırsın ?</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1444,12 +1444,12 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/midas2.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/pinar-oktem.jpg" alt="Pınar Öktem">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Pınar Öktem Dosay</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
+                          <p class="event-card-position">Head of Data & Business Analytics</p>
                           <p class="event-card-company">Midas</p>
                         </div>
                       </div>
@@ -1505,8 +1505,8 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">Empathy at Scale: How AI Understands Your Customers Better</h3>
-                    <p class="event-card-desc"></p>
+                    <h3 class="event-card-heading">TBA</h3>
+                    <p class="event-card-desc">To be announced</p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1531,13 +1531,13 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/fatih-cetin.png" alt="Fatih Samet Çetin">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="logo">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Fatih Samet Çetin</p>
+                        <p class="event-card-name"></p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Co-founder</p>
-                          <p class="event-card-company">Artiwise</p>
+                          <p class="event-card-position"></p>
+                          <p class="event-card-company"></p>
                         </div>
                       </div>
                     </div>
@@ -1624,7 +1624,7 @@
                         <p class="event-card-name">Deniz Aksoy</p>
                         <div class="event-card-title">
                           <p class="event-card-position">Eğitmen</p>
-                          <p class="event-card-company">Deniz Aksoy Eğitim Tasarım Danışmanlık</p>
+                          <p class="event-card-company">Creadata</p>
                         </div>
                       </div>
                     </div>
