--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -214,7 +214,7 @@
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
                         <a href="https://www.dskillshub.com/">
-                        <img src="../assets/partners/dskill.png" width="30%" alt="Digital Skills Hub">
+                        <img src="../assets/partners/dskillshub.png" width="30%" alt="Digital Skills Hub">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
