--- a/program/index.html
+++ b/program/index.html
@@ -1222,7 +1222,7 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/Pınar Özveren.jpg" alt="tba">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Pınar özveren</p>
+                        <p class="event-card-name">Pınar Özveren</p>
                         <div class="event-card-title">
                           <p class="event-card-position">Veri Analiz Lideri</p>
                           <p class="event-card-company">Ford Otosan</p>
@@ -1594,7 +1594,7 @@
                       <div class="event-card-about">
                         <p class="event-card-name">Deniz Aksoy</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Eğitmen</p>
+                          <p class="event-card-position">Eğitmen & Danışman</p>
                           <p class="event-card-company">Creadata</p>
                         </div>
                       </div>
