--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
           <h2 style="text-align:center; font-size: 36px; margin-top:72px; margin-bottom:32px;">Yer - Tarih</h2>
                 <p style="text-align:center;font-size: 24px; line-height: 24px;">
 
-                    2 & 3 & 4 Kasım Workshop : Online<br><br>
+                    2 & 4 Kasım Workshop : Online<br><br>
+                    3 Kasım Datathon : Boğaziçi Üniversitesi Bilgisayar Mühendisliği Binası<br><br>
                     5 Kasım Zirve : Boğaziçi Üniversitesi Güney Kampüs
                     <br>Albert Long Hall (Saatli Bina)<br>
                  
