--- a/program/index.html
+++ b/program/index.html
@@ -1333,7 +1333,7 @@
                       <div class="event-card-about">
                         <p class="event-card-name">Esra Kayabalı</p>
                         <div class="event-card-title">
-                          <p class="event-card-position">Solutions Architect</p>
+                          <p class="event-card-position">Senior Solutions Architect</p>
                           <p class="event-card-company">Amazon Web Services (AWS)</p>
                         </div>
                       </div>
@@ -1476,8 +1476,8 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced</p>
+                    <h3 class="event-card-heading">Sosyal Bilimlerde Makine Öğrenmesi</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1563,8 +1563,8 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Dashboard Tasarımında Görsel Algı</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
