--- a/sss/index.html
+++ b/sss/index.html
@@ -40,7 +40,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../2022/styles.css"/>
         <title>
-            Boğaziçi DataCamp '23
+            Boğaziçi DataCamp '24
         </title>
 
 
@@ -94,9 +94,9 @@
 
                     <a href="../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
 
-                    <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '22</a>
+                    <a href="/2023" data-type="navItem" class="animated fast fadeOut">DataCamp '23</a>
 
-                    <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
+                    <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '22</a>
 
 
 
@@ -122,7 +122,7 @@
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Boğaziçi Datacamp Veri Bilimi Zirvesi yüz yüze katılımcılarını 5 Kasım tarihinde Boğaziçi Üniversitesi Güney Kampüs’te Albert Long Hall (saatli bina) binasında ağırlayacaktır. Etkinliğimizin workshop’ları 2, 3 ve 4 Kasım tarihlerinde online olarak gerçekleşecektir.
+                          Boğaziçi Datacamp Veri Bilimi Zirvesi yüz yüze katılımcılarını 3 Kasım tarihinde Boğaziçi Üniversitesi Güney Kampüs’te Albert Long Hall (saatli bina) binasında ağırlayacaktır. Etkinliğimizin workshop’ları 30 ve 31 Ekim tarihlerinde online olarak gerçekleşecektir.
                         </div>
                       </div>
                     </div>
@@ -147,7 +147,7 @@
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          Bilet ücretine Zirve’ye katılma hakkı, Workshoplara katılma hakkı ve promosyonlara erişim hakkı dahil olmak üzere Boğaziçi DataCamp’in tüm içerikleri dahildir. Sadece 5 Kasım günündeki zirveye fiziksel olarak katılmak için yüz yüze bilet almanız gerekmektedir.
+                          Bilet ücretine Zirve’ye katılma hakkı, Workshoplara katılma hakkı ve promosyonlara erişim hakkı dahil olmak üzere Boğaziçi DataCamp’in tüm içerikleri dahildir. Sadece 3 Kasım günündeki zirveye fiziksel olarak katılmak için yüz yüze bilet almanız gerekmektedir.
                         </div>
                       </div>
                     </div>
@@ -269,7 +269,7 @@
             </a>
             <p>
               <p style="font-size: 14px
-            ; line-height: 20px">© 2022 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+            ; line-height: 20px">© 2024 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
             </p>
           </div>
         </footer>
