Soon to be announced eklendi.

--- a/program/index.html
+++ b/program/index.html
@@ -54,7 +54,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500&display=swap" rel="stylesheet">
-    <title> Boğaziçi DataCamp '23 </title>
+    <title> Boğaziçi DataCamp '24 </title>
     <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128963962-1"></script>
     <script>
@@ -102,8 +102,8 @@
           <a href="" data-type="navItem" class="animated fast fadeOut">Program</a>
           <a href="../sponsorlar" data-type="navItem" class="animated fast fadeOut">Sponsorlar</a>
           <a href="../../sss" data-type="navItem" class="animated fast fadeOut active">SSS</a>
+          <a href="/2023" data-type="navItem" class="animated fast fadeOut">DataCamp '23</a>
           <a href="/2022" data-type="navItem" class="animated fast fadeOut">DataCamp '22</a>
-          <a href="/2021" data-type="navItem" class="animated fast fadeOut">DataCamp '21</a>
 
         </nav>
       </div>
@@ -114,17 +114,17 @@
         <div class="program-containerrr">
           <div class="program-head-wrapper">
             <div class="program-head-heading">
-              <p class="program-label">BOĞAZİÇİ DATACAMP ‘23</p>
-              <h1 class="program-heading">Programımız</h1>
+              <p class="program-label">BOĞAZİÇİ DATACAMP ‘24</p>
+              <h1 class="program-heading">Soon to be announced!</h1>
             </div>
             <div class="program-head-desc">
-              <p>Boğaziçi DataCamp '23; Zirve, Workshoplar ve Datathon olmak üzere 3 kısımdan oluşmaktadır.</p>
+              <p>Boğaziçi DataCamp '24; Zirve, Workshoplar ve Datathon olmak üzere 3 kısımdan oluşmaktadır.</p>
             </div>
           </div>
         </div>
       </section>
       <section class="section section-program-plan">
-        <div class="program-containerrr" >
+        <div class="program-containerrr" style="display:none">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-purple">Workshop</p>
@@ -318,7 +318,7 @@
         </svg>
       </div>
 
-      <section class="section section-program-plan">
+      <section class="section section-program-plan" style="display:none">
         <div class="program-containerrr">
           <div class="day-card">
             <div class="day-card-head">
@@ -442,7 +442,7 @@
       </div>
 
       <section class="section section-program-plan">
-        <div class="program-containerrr">
+        <div class="program-containerrr" style="display:none">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-purple">Workshop</p>
@@ -1086,7 +1086,7 @@
         </svg>
       </div>
       <section class="section section-program-plan">
-        <div class="program-containerrr">
+        <div class="program-containerrr" style="display:none">
           <div class="day-card">
             <div class="day-card-head">
               <p class="program-label program-label-sec program-label-yellow">Zirve</p>
@@ -1662,7 +1662,7 @@
         </a>
         <p>
           <p style="font-size: 14px
-        ; line-height: 20px">© 2023Prove that there are 100 consecutive positive integers that are not perfect
+        ; line-height: 20px">© 2024Prove that there are 100 consecutive positive integers that are not perfect
 squares. Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
         </p>
       </div>
