--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -109,6 +109,11 @@
   <div class="page-container">
     <section style="background-image:none;color:black;display:flex; flex-basis:100%;">
         <div class="sponsorspage">
+
+            <div class="announcement">
+                Soon to be announced!
+            </div>
+
             <div class="sponsorscolumns"  style="display:none">
                 <div class="sponsorcoltitle">
                     Ana Sponsor
