datathon başvurusu gizli

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             
                         </div>
                         <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
-                            <a style="padding-top: 22.5px;padding-right: 36px; padding-bottom: 22.5px; padding-left: 36px;color: white;font-size: 2.4vh; font-family: inherit;
+                            <a style="padding-top: 22.5px;padding-right: 36px; padding-bottom: 22.5px; padding-left: 36px;color: white;font-size: 2.4vh; font-family: inherit; display:none;
 " href="https://forms.gle/6Lnb8yqQ8Wk9uD1N6" target="_blank">Datathon'a Başvur</a>
                             
                         </div>
@@ -232,31 +232,22 @@
         <div class="container"> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
             <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
             <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
-                data-link="https://photos.app.goo.gl/sfRShTKr6D9vp91S7" data-title="Datacamp"
+                data-link="https://photos.app.goo.gl/aMeLMepQMvi1Hxtd6" data-title="Datacamp"
                 data-description="20 new photos added to shared album">
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc-JmtT-Z1eQEb-iqs7wNEmlg-dgujOmjlG_RIvhxjqE8Z0H52qdT5XmIw8DJ7gSZ-ZFo0vD0epBrl324SMHv3COePbB0OwF44M_6BAJqTaN4Rx_XFNOKx6ZknTY4p2zeEDU_UMnfS6YRUakhymGYEqc=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/5Ej24u4JFysaUoHW6"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc_pazbeh0gH61gRJqcRAjFHw_UROi6Qcaz-SZ3pFm_4Cyr3NdyBSrZUsXj6msQqzXKyPK588m4IfA4QtH4UBbxVPrUlUv5wM0fSn1Km9wb6pR5x81YVQBxo6dfYocmBAtrwsRbEKtExO6JihppqaiG4=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/FuN8WJw7iAR4vNN47"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc8uvQYLkzbDMcWgpA0SYxju08MiIT71DdktPGNJ2phyXVzQNav5zRDzLwqQloQyoPki0m4A06lHhs7CacRt9Dh9JeWX3lNYctwLHAXurFmebQouXqXXY-eVOzakyyE4uQrUnCn-m-JGW9p7GjS_X5_u=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/cD5xgjRhRtEW4dBR8"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc_8UqNTtRETvk0IOaDDsSt565owxawA76KzvC9vhbLWFDg-WXYJgkCcOWD9Lo3Zb59oYyfJgIUv-RC5JCx1LTNNJKm7e9vD9CIsRqJRj22ZEyfVP6a4LQRhawMfCq2Zs4XqJDhJ9Y_blT7-mM3EYhv9=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/j329nN9PRzgD449FA"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc_-ksuqmAdLL2VNKXVf4Iax4sEIGWoP-l8tyNf7-_7_wPMTHoBsuCm8lOZ9rDvBO73gQeo0klsIfj1FQhsdEfBRDzOJ4gevUEBNKMkMEqOGW92PBEPQ_1vcxdP2sA1TQJLSxUG-4zAbqu2EyzWUaYRy=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/yMt9HTTKPqZuXvp48"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc_xmIBQZmP1E55kWUc-5rDfaUC_WLtA0jykr6LScd4a3SRJv6TDBEUVAN9_oz5BRO9FzAbbBnDOThTov-k8Ox3vq0ibKGlrodAB-6fv2r0UAkDkxsYqUQHIjRHem4Bv4rM3w0Acb5bmsA5rz6KcYqNo=w2206-h1470-s-no?authuser=0"></object>
+                    data="https://photos.app.goo.gl/bmLsaZcXy95Kt1gQA"></object>
                 <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc9G2KjngigNaosu-eRsnCAGIHJpc8nBcJr9l3GnItjrm7aeizaQtm78w2RvcF8QHkLv94u-sCJoA3Y8yGNRnkpBui98acLYQITSVnVu4eFDEsFRJWg9eczyfkLH4yPGhPLvuVaLi-yvIjInMFNickmu=w980-h1470-s-no?authuser=0"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc8A32czwxbNgFQO1C5KfGEQ9JXnG8jj_l7I9elAmOEzwp-UoC59v7vLQGujgJiK7qm8KDqrZdoZhup6ZcRFUkclkHH6BCg_c0L5aaf680C9E1CyOWZB1fxpTB66Sb7_hS3QpuI0SIGCyyKqNJur5RRb=w2206-h1470-s-no?authuser=0"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/dpmJ-6LHOFAmO--yfknSzdHBS2GJLJmD8P1H7rRzxoeoUGQExbsXfYdwAcyMQM-1NztWhjJvA_zxalWqQVsKnTX7h8O2e8CxAQ2iVMoNEtCYL6Rs-VkWMjZGhrcOqa7uYTPu6ne7Fg=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/EVmR2Mr1XNYJVm5T76xYt55zmhQLP5rHB0khnhX9yLeSDYQrDCLuLzZklaFhIHFzc_b8cJ1o5uxSQhemvP60QjTbetSFKJildU77H84VUp9-p-xRzzkmHplJ3acyf5w-9Hgcf7wYLQ=w1920-h1080"></object>
-                <object
-                    data="https://lh3.googleusercontent.com/pw/AIL4fc8niyF05ip5YRlXhB7CrrDRDXmh5HiLpyyWPsoBaD0Od0SLiAjQzjPzP8lylZ33dxgqWYK6ur3WEdfNc5ghlZv3IEtl3HuJz7GLsDLhxyD4zh9o12t0wY2HcP4b4ODiqpoNFwbm4ROOGpZXlJrLxzt9=w2206-h1470-s-no?authuser=0"></object>
-
+                    data="https://photos.app.goo.gl/RtpRerpp7uxB3gb47"></object>
             </div>
 
             <!--BURAYA KADAR, ARASININ YERİNE KOY-->
