--- a/sss/index.html
+++ b/sss/index.html
@@ -140,6 +140,18 @@
                       </div>
                     </div>
                     <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Datathon'a nasıl kayıt olabilirim?
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Datathon başvurularımız çok yakında sizlerle olacak.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                           Bilet ücretine neler dahil?
