Yakında duyurulacak eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -111,7 +111,7 @@
         <div class="sponsorspage">
 
             <div class="announcement">
-                Soon to be announced!
+                 Yakında duyurulacak!
             </div>
 
             <div class="sponsorscolumns"  style="display:none">
