--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -110,8 +110,8 @@
     <section style="background-image:none;color:black;display:flex; flex-basis:100%;">
         <div class="sponsorspage">
 
-            <div class="announcement" style="text-align: center;">
-                <h5>
+            <div class="announcement">
+                <h5 style="text-align: center;">
                  Yakında duyurulacak!
                 </h5>
             </div>
