--- a/program/index.html
+++ b/program/index.html
@@ -115,7 +115,7 @@
           <div class="program-head-wrapper">
             <div class="program-head-heading">
               <p class="program-label">BOĞAZİÇİ DATACAMP ‘24</p>
-              <h1 class="program-heading">Yakında duyurulacak!</h1>
+              <h1 class="program-heading text-center">Yakında duyurulacak!</h1>
             </div>
             <div class="program-head-desc">
               <p>Boğaziçi DataCamp '24; Zirve, Workshoplar ve Datathon olmak üzere 3 kısımdan oluşmaktadır.</p>
