--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         
       </section>
    
-    <<section id="gallery">
+    <section id="gallery">
         <div class="container-wide">
             <h2>Geçtiğimiz Seneden Fotoğraflar</h2>
         </div>
