compec.org subdomain

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <header class="main">
         <div class="containeer">
-            <a data-scroll href="http://datacamp.boun.edu.tr/" class="logo">
+            <a data-scroll href="https://datacamp.compec.org" class="logo">
         
                 <img src="../assets/RGB-LogoV5.png" alt="Boğaziçi Datacamp">
         
